fix: made send button align

--- a/client/src/public/css/styles.css
+++ b/client/src/public/css/styles.css
@@ -939,6 +939,7 @@ code {
   color: var(--color-text-light);
   font-family: inherit;
   height: 28px;
+  width: 96px;
 }
 
 #chat-tray-error-container {
